--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 
 <div class="fancy-navbra">
     <div class="fancy-cupid">
+       <div class="fancy-cupid">
        <div class="fluffy-icon1">
-            <img src="assets/images/logo.png" alt="">
+            <img src="assets/images/logo.png" alt="logo">
        </div>
        <div class="fancy-icon2">
-            <img src="assets/images/" alt="">
+            <img src="assets/images/closeIcon.svg" alt="closeIcon">
        </div>
        <div class="fluffy-icon3">
-
+            <img src="assets/images/twitter.svg" alt="twitterIcon">    
        </div>
+    </div>   
     </div>   
 
     <div class="fancy-icons">
