--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     
 
+<div class="main">
+
+
+
+
 <div class="fancy-navbra">
     <div class="fancy-cupid">
-       <div class="fancy-cupid">
        <div class="fluffy-icon1">
             <img src="assets/images/logo.png" alt="logo">
        </div>
@@ -19,22 +23,106 @@
             <img src="assets/images/closeIcon.svg" alt="closeIcon">
        </div>
        <div class="fluffy-icon3">
-            <img src="assets/images/twitter.svg" alt="twitterIcon">    
+            <img src="assets/images/twitter.svg" alt="twitterIcon">  
+            <h4>EN</h4>  
        </div>
     </div>   
-    </div>   
-
     <div class="fancy-icons">
         <div class="fluffy-cheeks">
             <div class="fluffy-icons-list">
-                <li>Homes</li>
-                <li>Pages</li>
-                <li>components</li>
-                <li>Documentation</li>
-                <li>Portfolio</li>
-                <li>contact</li>
+                <li>Homes <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                    <ul class="first-drop-down">
+                        <li><a href="#">Default</a></li>
+                        <li><a href="#">Bicycle</a></li>
+                        <li><a href="#">Bigcartel</a></li>
+                        <li><a href="#">Cafe</a></li>
+                        <li><a href="#">Digital</a></li>
+                        <li><a href="#">Ecommerce</a></li>
+                        <li><a href="#">Event</a></li>
+                        <li><a href="#">Interior</a></li>
+                        <li><a href="#">Landing</a></li>
+                        <li><a href="#">Promotion</a></li>
+                        <li><a href="#">Software</a></li>
+                        <li><a href="#">Studio</a></li>
+                      </ul>
+                </li>
+                <li>Pages <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                    <ul class="dd-2">
+                        <li><a href="#">404</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Blog single</a></li>
+                        <li><a href="#">Cart</a></li>
+                        <li><a href="#">Casestudy</a></li>
+                        <li><a href="#">Coming soon</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">One page</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Profile</a></li>
+                        <li><a href="#">RTL</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Signin</a></li>
+                        <li><a href="#">Signup</a></li>
+                        <li><a href="#">Product single</a></li>
+                        <li><a href="#">Split static</a></li>
+                        <li><a href="#">Split youtube</a></li>
+                        <li><a href="#">Starter</a></li>
+                      </ul>  
+                </li>
+                <li>Components <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                    <ul class="dd-3">
+                        <li><a href="#">Sparrow</a></li>
+                        <li><a href="#">Accordion</a></li>
+                        <li><a href="#">Anchor</a></li>
+                        <li><a href="#">Backgrounds</a></li>
+                        <li><a href="#">Borders</a></li>
+                        <li><a href="#">Carousel</a></li>
+                        <li><a href="#">Colors</a></li>
+                        <li><a href="#">Cookie notice</a></li>
+                        <li><a href="#">Countdown</a></li>
+                        <li><a href="#">Countup</a></li>
+                        <li><a href="#">Fancynav</a></li>
+                        <li><a href="#">Filter</a></li>
+                        <li><a href="#">Googlemap</a></li>
+                        <li><a href="#">Icons</a></li>
+                        <li><a href="#">Inline player</a></li>
+                        <li><a href="#">Lightbox</a></li>
+                        <li><a href="#">Masonry</a></li>
+                        <li><a href="#">Parallax</a></li>
+                        <li><a href="#">Progressbar</a></li>
+                        <li><a href="#">Spacing</a></li>
+                        <li><a href="#">Typed text</a></li>
+                        <li><a href="#">Typography</a></li>
+                        <li><a href="#">Zanimation</a></li>
+                        <li><a href="#">Bootstrap</a></li>
+                        <li><a href="#">Badges</a></li>
+                        <li><a href="#">Buttons</a></li>
+                        <li><a href="#">Cards</a></li>
+                        <li><a href="#">Forms</a></li>
+                        <li><a href="#">Modals</a></li>
+                        <li><a href="#">Navbar</a></li>
+                        <li><a href="#">Scrollspy</a></li>
+                        <li><a href="#">Sizing</a></li>
+                        <li><a href="#">Tables</a></li>
+                        <li><a href="#">Tabs</a></li>
+                        <li><a href="#">Tooltips</a></li>
+                      </ul>                      
+                </li>
+                <li><a href="#">Documentation</a> <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                    <ul class="dd-4">
+                        <li><a href="#">Getting started</a></li>
+                        <li><a href="#">File structure</a></li>
+                        <li><a href="#">Customization</a></li>
+                        <li><a href="#">Gulp</a></li>
+                        <li><a href="#">RTL</a></li>
+                        <li><a href="#">Plugins</a></li>
+                        <li><a href="#">Changelog</a></li>
+                      </ul>
+                </li>
+                <li><a href="#">Portfolio</a> <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span></li>
+                <li><a href="#">Contact</a> <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span></li>
             </div>
-
         </div>
     </div>
 </div>
@@ -59,7 +147,7 @@
 
 
 
-
+</div>    
 
     <script src="script.js"></script>
 </body>
