--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="fancy-icons">
         <div class="fluffy-cheeks">
             <div class="fluffy-icons-list">
-                <li>Homes <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                <li class="f-dd-1" id="first_id-dd">Homes <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
                     <ul class="first-drop-down">
                         <li><a href="#">Default</a></li>
                         <li><a href="#">Bicycle</a></li>
@@ -46,7 +46,7 @@
                         <li><a href="#">Studio</a></li>
                       </ul>
                 </li>
-                <li>Pages <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                <li class="second-dd" id="second_id-dd">Pages <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
                     <ul class="dd-2">
                         <li><a href="#">404</a></li>
                         <li><a href="#">About</a></li>
@@ -54,23 +54,9 @@
                         <li><a href="#">Blog single</a></li>
                         <li><a href="#">Cart</a></li>
                         <li><a href="#">Casestudy</a></li>
-                        <li><a href="#">Coming soon</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">One page</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Profile</a></li>
-                        <li><a href="#">RTL</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Signin</a></li>
-                        <li><a href="#">Signup</a></li>
-                        <li><a href="#">Product single</a></li>
-                        <li><a href="#">Split static</a></li>
-                        <li><a href="#">Split youtube</a></li>
-                        <li><a href="#">Starter</a></li>
-                      </ul>  
+                    </ul>  
                 </li>
-                <li>Components <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                <li class="third-dd" id="third_id-dd">Components <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
                     <ul class="dd-3">
                         <li><a href="#">Sparrow</a></li>
                         <li><a href="#">Accordion</a></li>
@@ -80,36 +66,9 @@
                         <li><a href="#">Carousel</a></li>
                         <li><a href="#">Colors</a></li>
                         <li><a href="#">Cookie notice</a></li>
-                        <li><a href="#">Countdown</a></li>
-                        <li><a href="#">Countup</a></li>
-                        <li><a href="#">Fancynav</a></li>
-                        <li><a href="#">Filter</a></li>
-                        <li><a href="#">Googlemap</a></li>
-                        <li><a href="#">Icons</a></li>
-                        <li><a href="#">Inline player</a></li>
-                        <li><a href="#">Lightbox</a></li>
-                        <li><a href="#">Masonry</a></li>
-                        <li><a href="#">Parallax</a></li>
-                        <li><a href="#">Progressbar</a></li>
-                        <li><a href="#">Spacing</a></li>
-                        <li><a href="#">Typed text</a></li>
-                        <li><a href="#">Typography</a></li>
-                        <li><a href="#">Zanimation</a></li>
-                        <li><a href="#">Bootstrap</a></li>
-                        <li><a href="#">Badges</a></li>
-                        <li><a href="#">Buttons</a></li>
-                        <li><a href="#">Cards</a></li>
-                        <li><a href="#">Forms</a></li>
-                        <li><a href="#">Modals</a></li>
-                        <li><a href="#">Navbar</a></li>
-                        <li><a href="#">Scrollspy</a></li>
-                        <li><a href="#">Sizing</a></li>
-                        <li><a href="#">Tables</a></li>
-                        <li><a href="#">Tabs</a></li>
-                        <li><a href="#">Tooltips</a></li>
-                      </ul>                      
+                    </ul>                      
                 </li>
-                <li><a href="#">Documentation</a> <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
+                <li class="fourth_dd" id="fourth_id-dd"><a href="#">Documentation</a> <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span>
                     <ul class="dd-4">
                         <li><a href="#">Getting started</a></li>
                         <li><a href="#">File structure</a></li>
@@ -120,8 +79,8 @@
                         <li><a href="#">Changelog</a></li>
                       </ul>
                 </li>
-                <li><a href="#">Portfolio</a> <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span></li>
-                <li><a href="#">Contact</a> <span><object data="assets/images/down_arrow.svg" width="13" height="13"> </object></span></li>
+                <li class="second-last"><a href="#">Portfolio</a></li>
+                <li class="last-dd"><a href="#">Contact</a></li>
             </div>
         </div>
     </div>
