updated the navbar
1 Responsive to all screens
2 Has better drop down menu,
3. you can customize the background color as you want- ( fluffy-icons class )

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <div class="fancy-navbra">
     <div class="fancy-cupid">
        <div class="fluffy-icon1">
-            <img src="assets/images/logo.png" alt="logo">
+            <img src="assets/images/logo.png" alt="logo" id="img22">
        </div>
        <div class="fancy-icon2">
-            <img src="assets/images/closeIcon.svg" alt="closeIcon">
+            <img src="assets/images/closeIcon.svg" alt="closeIcon" id="23">
        </div>
        <div class="fluffy-icon3">
-            <img src="assets/images/twitter.svg" alt="twitterIcon">  
+            <img src="assets/images/twitter.svg" alt="twitterIcon" id="img24">  
             <h4>EN</h4>  
        </div>
     </div>   
